Header spacing fixed

--- a/src/assets/scss/common/_base.scss
+++ b/src/assets/scss/common/_base.scss
@@ -2329,3 +2329,10 @@ textarea {
 .highcharts-area {
   cursor: pointer;
 }
+.page-header {
+  margin-bottom: 1.5rem;
+  h4 {
+    font-size: 2rem;
+    line-height: 2.4;
+  }
+}
