--- a/src/assets/scss/intelligence/_intelligence.scss
+++ b/src/assets/scss/intelligence/_intelligence.scss
@@ -144,13 +144,6 @@
       }
     }
     .portfolio-bar-graph {
-      .page-header {
-        margin-bottom: 2.8rem;
-        h4 {
-          font-size: 2rem;
-          line-height: 2.4;
-        }
-      }
       .bar-graph-section {
         width: 100%;
         padding: 3.4rem 3.2rem;
