--- a/src/assets/scss/style.css
+++ b/src/assets/scss/style.css
@@ -5063,12 +5063,7 @@ form .radio-wrapper.inline .radio-control {
   h4 {
   margin-right: 0.4rem;
 }
-.intelligence-page-section
-  .intelligence-section
-  .portfolio-bar-graph
-  .page-header {
-  margin-bottom: 2.8rem;
-}
+
 .intelligence-page-section
   .intelligence-section
   .portfolio-bar-graph
